--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+GetOpt_pp
+========
+
 This is a fork of [getoptpp](https://code.google.com/archive/p/getoptpp/)
 which is based on version 2.18. 
 
